--- a/front-end/public/styles.css
+++ b/front-end/public/styles.css
@@ -129,6 +129,7 @@ Link {
   border: 2px solid #02010A;
   border-radius: 10px;
   text-align: center;
+  cursor: pointer;
 }
 
 .button-range .button:hover {
